[gd_scene format=3 uid="uid://mwecy2wpgkwg"]

[ext_resource type="Script" uid="uid://dtii2q5pq7rlf" path="res://barkley2/scenes/_utilityStation/utilitystation_screen.gd" id="1_6lm85"]
[ext_resource type="PackedScene" uid="uid://4mhuit4wdogr" path="res://barkley2/scenes/_utilityStation/utility_menus/main_info_panel.tscn" id="3_8kpvu"]
[ext_resource type="Texture2D" uid="uid://dgnpnn7uepcb2" path="res://barkley2/assets/b2_original/images/merged/sMenuUtility.png" id="3_yaeih"]
[ext_resource type="Theme" uid="uid://ccbn336iigwja" path="res://barkley2/themes/utility_station.tres" id="4_qw4ou"]
[ext_resource type="PackedScene" uid="uid://ch06rr2kobkfb" path="res://barkley2/scenes/_utilityStation/utility_menus/gun_info_panel.tscn" id="4_yj7y8"]
[ext_resource type="PackedScene" uid="uid://ctcfj2lxiyt2s" path="res://barkley2/scenes/_utilityStation/utility_menus/gun_info_breed_panel.tscn" id="9_xscvq"]
[ext_resource type="PackedScene" uid="uid://cch1wgurfp11t" path="res://barkley2/scenes/_utilityStation/candy_panel.tscn" id="11_jigd8"]
[ext_resource type="PackedScene" uid="uid://brg38jf5pceon" path="res://barkley2/scenes/_utilityStation/utility_menus/brain_info_panel.tscn" id="12_mfdu4"]
[ext_resource type="PackedScene" uid="uid://dy4qs8y417chx" path="res://barkley2/scenes/_utilityStation/utility_menus/brain_vidcon_panel.tscn" id="13_hqon2"]
[ext_resource type="PackedScene" uid="uid://0rlk0dt0lkwu" path="res://barkley2/scenes/_utilityStation/brain_vidcon_levelup_panel.tscn" id="14_llltk"]
[ext_resource type="PackedScene" uid="uid://b1tuuiwfg58xq" path="res://barkley2/scenes/_utilityStation/equipment_panel.tscn" id="15_x3iuf"]
[ext_resource type="PackedScene" uid="uid://dbboxs8bnjdgh" path="res://barkley2/scenes/_utilityStation/utility_menus/inventory_panel.tscn" id="16_46cem"]
[ext_resource type="PackedScene" uid="uid://2u3sqikbbnx2" path="res://barkley2/scenes/_utilityStation/utility_menus/dwarfnet_panel.tscn" id="17_6r7ck"]
[ext_resource type="PackedScene" uid="uid://6w6xa8eigkmh" path="res://barkley2/scenes/_utilityStation/gun_info_panel.tscn" id="24_qcuev"]
[ext_resource type="PackedScene" uid="uid://bxpoo55h36rs" path="res://barkley2/scenes/_utilityStation/gun_info_rename_panel.tscn" id="25_iyqur"]
[ext_resource type="Script" uid="uid://fu5jn0ocp6a7" path="res://barkley2/scenes/_utilityStation/gun_info_bag_panel.gd" id="32_4w3xs"]
[ext_resource type="Script" uid="uid://bo45t2e1yx0wo" path="res://barkley2/scenes/_utilityStation/gun_info_smelt_panel.gd" id="32_sf8h1"]
[ext_resource type="PackedScene" uid="uid://5nr8pp2lmcn2" path="res://barkley2/scenes/_utilityStation/gun_info_breed_animation_panel.tscn" id="33_305tp"]
[ext_resource type="Script" uid="uid://bhltncgexx1bj" path="res://barkley2/scenes/_utilityStation/gun_reload_menu.gd" id="34_t58kc"]

[sub_resource type="GDScript" id="GDScript_nsxts"]
resource_name = "utility_bg"
script/source = "@tool
extends Control

@export var move_bg 		:= false
@export var move_dir 		:= Vector2(1.0,1.0)
@export var rand_dir		:= false
@export var move_speed 		:= 1.0
@export var line_width		:= 1.0

var move_offset := Vector2.ZERO :
	set(_f):
		move_offset.x = wrapf( _f.x, 0.0, 8.0 )
		move_offset.y = wrapf( _f.y, 0.0, 8.0 )

## Check ustation -> draw -> line 5.
# Draws the bg on the fly.

var intensity		:= 1.0
var intensity_mod	:= 1.0
var flick 			:= 0.025
var my_color 		:= Color.GREEN

func _ready() -> void:
	if not Engine.is_editor_hint():
		if B2_Screen.is_utility_open:
			if B2_Screen.utility_screen:
				B2_Screen.utility_screen.flickered.connect( flicker )
				B2_Screen.utility_screen.set_color.connect( _set_color )
				B2_Screen.utility_screen.set_bg_intensity.connect( _set_intensity )
	if rand_dir and move_bg:
		move_dir = Vector2( [-1,1].pick_random(), [-1,0,1].pick_random() )
		
func _set_intensity( _intensity : float ) -> void:
	intensity = _intensity
	
func _set_color( _my_color : Color ) -> void:
	my_color = _my_color

func flicker( _flick : float ) -> void:
	flick = _flick
	queue_redraw()

func hide_bg() -> void:
	var t := create_tween()
	t.tween_property( self, \"intensity_mod\", 0.0, 1.0)

func show_bg() -> void:
	var t := create_tween()
	t.tween_property( self, \"intensity_mod\", 1.0, 1.0)

func _physics_process(delta: float) -> void:
	if move_bg:
		move_offset += (move_dir * move_speed) * delta
		queue_redraw()

func _draw() -> void:
	draw_rect( Rect2( Vector2.ZERO, size ), Color.BLACK )
	
	@warning_ignore(\"integer_division\")
	for w in B2_Gamedata.SCREEN_WIDTH / 8:
		draw_line( Vector2(w * 8 + move_offset.x, 0), Vector2(w * 8 + move_offset.x, B2_Gamedata.SCREEN_HEIGHT), Color(my_color, flick * intensity * intensity_mod * 0.5), line_width )
	@warning_ignore(\"integer_division\")
	for h in B2_Gamedata.SCREEN_HEIGHT / 8:
		draw_line( Vector2(0, h * 8 + move_offset.y), Vector2(B2_Gamedata.SCREEN_WIDTH, h * 8 + move_offset.y),Color(my_color, flick * intensity * intensity_mod * 0.5), line_width )
"

[node name="utilitystation_screen" type="Control" unique_id=173808904]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6lm85")

[node name="bg" type="Control" parent="." unique_id=1779003366]
z_index = -999
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = SubResource("GDScript_nsxts")
move_bg = true
move_dir = Vector2(-1, -1)
move_speed = 5.0

[node name="frame" type="TextureRect" parent="." unique_id=1422638948]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_yaeih")

[node name="main_info_panel" parent="frame" unique_id=502966505 instance=ExtResource("3_8kpvu")]
visible = false
layout_mode = 0
offset_left = 11.0
offset_right = 300.0

[node name="gun_info_panel" parent="frame" unique_id=1950432417 instance=ExtResource("4_yj7y8")]
visible = false
layout_mode = 0

[node name="gun_info_bando_panel" parent="frame" unique_id=1926844211 instance=ExtResource("24_qcuev")]
visible = false
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 296.0
offset_bottom = 224.0
show_gunbag_guns = false

[node name="gun_info_bando_rename_panel" parent="frame" unique_id=1176113599 node_paths=PackedStringArray("gun_info_panel") instance=ExtResource("25_iyqur")]
visible = false
layout_mode = 0
offset_left = 11.0
offset_top = 12.0
offset_right = 300.0
offset_bottom = 228.0
gun_info_panel = NodePath("../gun_info_bando_panel")

[node name="gun_info_bag_panel" parent="frame" unique_id=1762592417 node_paths=PackedStringArray("default_button") instance=ExtResource("24_qcuev")]
visible = false
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 296.0
offset_bottom = 224.0
script = ExtResource("32_4w3xs")
default_button = NodePath("../right_panel/right_panel_vbox/gun_menu/gun_bag_menu/gun_bag_fave_btn")
show_bandolier_guns = false

[node name="gun_info_bag_rename_panel" parent="frame" unique_id=1594204304 node_paths=PackedStringArray("gun_info_panel") instance=ExtResource("25_iyqur")]
visible = false
layout_mode = 0
offset_left = 11.0
offset_top = 12.0
offset_right = 300.0
offset_bottom = 228.0
gun_info_panel = NodePath("../gun_info_bag_panel")

[node name="gun_info_smelt_panel" parent="frame" unique_id=1018658264 node_paths=PackedStringArray("default_button") instance=ExtResource("24_qcuev")]
visible = false
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 296.0
offset_bottom = 224.0
script = ExtResource("32_sf8h1")
default_button = NodePath("../right_panel/right_panel_vbox/gun_menu/gun_smelt_menu/gun_smelt_current_btn")
show_lineage = false
show_smelt = true

[node name="gun_info_breed_panel" parent="frame" unique_id=1879809997 instance=ExtResource("9_xscvq")]
visible = false
layout_mode = 0

[node name="gun_info_breed_animation_panel" parent="frame" unique_id=2043675104 instance=ExtResource("33_305tp")]
visible = false
layout_mode = 0
offset_left = 0.0
offset_top = 0.0
offset_right = 289.0
offset_bottom = 216.0

[node name="candy_panel" parent="frame" unique_id=1432501346 instance=ExtResource("11_jigd8")]
layout_mode = 0

[node name="brain_info_panel" parent="frame" unique_id=1525267039 instance=ExtResource("12_mfdu4")]
layout_mode = 0

[node name="brain_vidcon_panel" parent="frame" unique_id=1935260503 instance=ExtResource("13_hqon2")]
layout_mode = 0

[node name="brain_vidcon_levelup_panel" parent="frame" unique_id=172342373 instance=ExtResource("14_llltk")]
layout_mode = 0

[node name="equipment_panel" parent="frame" unique_id=39097689 instance=ExtResource("15_x3iuf")]
layout_mode = 1

[node name="inventory_panel" parent="frame" unique_id=1963833063 instance=ExtResource("16_46cem")]
visible = false
layout_mode = 0

[node name="dwarfnet_panel" parent="frame" unique_id=1609685635 instance=ExtResource("17_6r7ck")]
layout_mode = 0
offset_left = 0.0
offset_top = 0.0
offset_right = 289.0
offset_bottom = 216.0

[node name="right_panel" type="ScrollContainer" parent="frame" unique_id=122578868]
layout_mode = 0
offset_left = 309.0
offset_top = 12.0
offset_right = 372.0
offset_bottom = 228.0
theme = ExtResource("4_qw4ou")
vertical_scroll_mode = 3

[node name="right_panel_vbox" type="VBoxContainer" parent="frame/right_panel" unique_id=1547468725]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 1

[node name="main_btn" type="Button" parent="frame/right_panel/right_panel_vbox" unique_id=1485641988]
layout_mode = 2
size_flags_vertical = 4
text = "X114JAM9"

[node name="gun_btn" type="Button" parent="frame/right_panel/right_panel_vbox" unique_id=1463328505]
layout_mode = 2
size_flags_vertical = 4
text = "Gun's"
autowrap_mode = 1

[node name="gun_menu" type="VBoxContainer" parent="frame/right_panel/right_panel_vbox" unique_id=726937070]
layout_mode = 2
theme_override_constants/separation = 1

[node name="gun_bando_btn" type="Button" parent="frame/right_panel/right_panel_vbox/gun_menu" unique_id=613207514]
layout_mode = 2
size_flags_vertical = 4
text = "Bandolier"
autowrap_mode = 1

[node name="gun_bando_menu" type="VBoxContainer" parent="frame/right_panel/right_panel_vbox/gun_menu" unique_id=665818904]
layout_mode = 2

[node name="gun_bando_rename_btn" type="Button" parent="frame/right_panel/right_panel_vbox/gun_menu/gun_bando_menu" unique_id=1569725894]
layout_mode = 2
text = "Rename"

[node name="gun_bag_btn" type="Button" parent="frame/right_panel/right_panel_vbox/gun_menu" unique_id=441642224]
layout_mode = 2
size_flags_vertical = 4
text = "Bag"
autowrap_mode = 1

[node name="gun_bag_menu" type="VBoxContainer" parent="frame/right_panel/right_panel_vbox/gun_menu" unique_id=1026778467]
layout_mode = 2

[node name="gun_bag_fave_btn" type="Button" parent="frame/right_panel/right_panel_vbox/gun_menu/gun_bag_menu" unique_id=2031358928]
layout_mode = 2
text = "Fave"

[node name="gun_bag_promote_btn" type="Button" parent="frame/right_panel/right_panel_vbox/gun_menu/gun_bag_menu" unique_id=1428175342]
layout_mode = 2
text = "Promote"

[node name="gun_smelt_btn" type="Button" parent="frame/right_panel/right_panel_vbox/gun_menu" unique_id=1764289678]
layout_mode = 2
size_flags_vertical = 4
text = "Smelt"
autowrap_mode = 1

[node name="gun_smelt_menu" type="VBoxContainer" parent="frame/right_panel/right_panel_vbox/gun_menu" unique_id=1231585278]
layout_mode = 2

[node name="gun_smelt_current_btn" type="Button" parent="frame/right_panel/right_panel_vbox/gun_menu/gun_smelt_menu" unique_id=578798124]
layout_mode = 2
text = "Current"

[node name="gun_smelt_empty_btn" type="Button" parent="frame/right_panel/right_panel_vbox/gun_menu/gun_smelt_menu" unique_id=950139412]
layout_mode = 2
text = "Empty"

[node name="gun_smelt_unfaves_btn" type="Button" parent="frame/right_panel/right_panel_vbox/gun_menu/gun_smelt_menu" unique_id=1042305757]
layout_mode = 2
text = "Unfaves"

[node name="gun_smelt_inbag_btn" type="Button" parent="frame/right_panel/right_panel_vbox/gun_menu/gun_smelt_menu" unique_id=559713147]
layout_mode = 2
text = "Inbag"

[node name="gun_reload_btn" type="Button" parent="frame/right_panel/right_panel_vbox/gun_menu" unique_id=982068887]
layout_mode = 2
size_flags_vertical = 4
text = "Reload"
autowrap_mode = 1

[node name="gun_reload_menu" type="VBoxContainer" parent="frame/right_panel/right_panel_vbox/gun_menu" unique_id=383729057]
layout_mode = 2
script = ExtResource("34_t58kc")

[node name="gun_reload_all" type="Button" parent="frame/right_panel/right_panel_vbox/gun_menu/gun_reload_menu" unique_id=1749850937]
layout_mode = 2
text = "All"

[node name="gun_reload_gun1" type="Button" parent="frame/right_panel/right_panel_vbox/gun_menu/gun_reload_menu" unique_id=2088327381]
layout_mode = 2
text = "GUN1"

[node name="gun_reload_gun2" type="Button" parent="frame/right_panel/right_panel_vbox/gun_menu/gun_reload_menu" unique_id=994476284]
layout_mode = 2
text = "GUN2"

[node name="gun_reload_gun3" type="Button" parent="frame/right_panel/right_panel_vbox/gun_menu/gun_reload_menu" unique_id=1768055875]
layout_mode = 2
text = "GUN3"

[node name="gun_breed_btn" type="Button" parent="frame/right_panel/right_panel_vbox/gun_menu" unique_id=548532941]
layout_mode = 2
size_flags_vertical = 4
text = "Breed"
autowrap_mode = 1

[node name="gun_breed_menu" type="VBoxContainer" parent="frame/right_panel/right_panel_vbox/gun_menu" unique_id=929199167]
layout_mode = 2

[node name="gun_breed_gun1_btn" type="Button" parent="frame/right_panel/right_panel_vbox/gun_menu/gun_breed_menu" unique_id=1131637887]
layout_mode = 2
text = "Empty"

[node name="gun_breed_gun2_btn" type="Button" parent="frame/right_panel/right_panel_vbox/gun_menu/gun_breed_menu" unique_id=1507051371]
layout_mode = 2
text = "Empty"

[node name="gun_breed_commence_btn" type="Button" parent="frame/right_panel/right_panel_vbox/gun_menu/gun_breed_menu" unique_id=1251644312]
layout_mode = 2
text = "Do it!"

[node name="gun_breed_select_btn" type="Button" parent="frame/right_panel/right_panel_vbox/gun_menu/gun_breed_menu" unique_id=1795274182]
layout_mode = 2
text = "Select"

[node name="candy_btn" type="Button" parent="frame/right_panel/right_panel_vbox" unique_id=1867517712]
layout_mode = 2
size_flags_vertical = 4
text = "Candy"
autowrap_mode = 1

[node name="candy_menu" type="VBoxContainer" parent="frame/right_panel/right_panel_vbox" unique_id=1238664818]
visible = false
layout_mode = 2
theme_override_constants/separation = 1

[node name="make_btn" type="Button" parent="frame/right_panel/right_panel_vbox/candy_menu" unique_id=1773148162]
layout_mode = 2
text = "Make"

[node name="brain_btn" type="Button" parent="frame/right_panel/right_panel_vbox" unique_id=578059717]
layout_mode = 2
size_flags_vertical = 4
text = "Brain"
autowrap_mode = 1

[node name="brain_menu" type="VBoxContainer" parent="frame/right_panel/right_panel_vbox" unique_id=2122828583]
visible = false
layout_mode = 2
theme_override_constants/separation = 1

[node name="vidcon_btn" type="Button" parent="frame/right_panel/right_panel_vbox/brain_menu" unique_id=1736899533]
layout_mode = 2
size_flags_vertical = 4
text = "Vidcons"
autowrap_mode = 1

[node name="brain_levelup_btn" type="Button" parent="frame/right_panel/right_panel_vbox/brain_menu" unique_id=1624467514]
layout_mode = 2
text = "Level Up"

[node name="brain_levelup_menu" type="VBoxContainer" parent="frame/right_panel/right_panel_vbox/brain_menu" unique_id=370924822]
layout_mode = 2

[node name="brain_levelup_guts_btn" type="Button" parent="frame/right_panel/right_panel_vbox/brain_menu/brain_levelup_menu" unique_id=54627056]
layout_mode = 2
text = "Guts"

[node name="brain_levelup_luck_btn" type="Button" parent="frame/right_panel/right_panel_vbox/brain_menu/brain_levelup_menu" unique_id=922201707]
layout_mode = 2
text = "Luck"

[node name="brain_levelup_acro_btn" type="Button" parent="frame/right_panel/right_panel_vbox/brain_menu/brain_levelup_menu" unique_id=1643728145]
layout_mode = 2
text = "Acro"

[node name="brain_levelup_might_btn" type="Button" parent="frame/right_panel/right_panel_vbox/brain_menu/brain_levelup_menu" unique_id=2004061463]
layout_mode = 2
text = "Might"

[node name="brain_levelup_piety_btn" type="Button" parent="frame/right_panel/right_panel_vbox/brain_menu/brain_levelup_menu" unique_id=810429542]
layout_mode = 2
text = "Piety"

[node name="brain_levelup_confirm_btn" type="Button" parent="frame/right_panel/right_panel_vbox/brain_menu/brain_levelup_menu" unique_id=291366208]
layout_mode = 2
text = "Confirm"

[node name="unbox_btn" type="Button" parent="frame/right_panel/right_panel_vbox/brain_menu" unique_id=1281968707]
layout_mode = 2
text = "Unbox"

[node name="equip_btn" type="Button" parent="frame/right_panel/right_panel_vbox" unique_id=379590853]
layout_mode = 2
size_flags_vertical = 4
text = "Equipment"
autowrap_mode = 1

[node name="equip_menu" type="VBoxContainer" parent="frame/right_panel/right_panel_vbox" unique_id=964904610]
visible = false
layout_mode = 2
theme_override_constants/separation = 1

[node name="equip_helmet_btn" type="Button" parent="frame/right_panel/right_panel_vbox/equip_menu" unique_id=1286147565]
layout_mode = 2
text = "Helmet"

[node name="equip_jerkin_btn" type="Button" parent="frame/right_panel/right_panel_vbox/equip_menu" unique_id=153060078]
layout_mode = 2
text = "Jerkin"

[node name="equip_equip_btn" type="Button" parent="frame/right_panel/right_panel_vbox/equip_menu" unique_id=1316522887]
layout_mode = 2
text = "Equip"

[node name="inventory_btn" type="Button" parent="frame/right_panel/right_panel_vbox" unique_id=1074964741]
layout_mode = 2
size_flags_vertical = 4
text = "Inventory"
autowrap_mode = 1

[node name="inventory_menu" type="VBoxContainer" parent="frame/right_panel/right_panel_vbox" unique_id=1397008440]
visible = false
layout_mode = 2
theme_override_constants/separation = 1

[node name="dwarf_btn" type="Button" parent="frame/right_panel/right_panel_vbox" unique_id=1758505161]
layout_mode = 2
size_flags_vertical = 4
disabled = true
text = "DwarfNET"
autowrap_mode = 1

[node name="dwarf_menu" type="VBoxContainer" parent="frame/right_panel/right_panel_vbox" unique_id=1763479881]
visible = false
layout_mode = 2
theme_override_constants/separation = 0

[node name="dwarf_connect_btn" type="Button" parent="frame/right_panel/right_panel_vbox/dwarf_menu" unique_id=944344751]
layout_mode = 2
text = "CONNECT"

[node name="unplug_btn" type="Button" parent="frame/right_panel/right_panel_vbox" unique_id=2095401948]
layout_mode = 2
size_flags_vertical = 4
text = "Unplug"
autowrap_mode = 1

[connection signal="renamed_gun" from="frame/gun_info_bando_rename_panel" to="." method="_on_gun_info_bando_rename_panel_renamed_gun"]
[connection signal="renamed_gun" from="frame/gun_info_bag_rename_panel" to="." method="_on_gun_info_bag_rename_panel_renamed_gun"]
[connection signal="changed_window_state" from="frame/gun_info_smelt_panel" to="." method="_control_btn_state"]
[connection signal="pressed" from="frame/right_panel/right_panel_vbox/main_btn" to="." method="_on_main_btn_pressed"]
[connection signal="pressed" from="frame/right_panel/right_panel_vbox/gun_btn" to="." method="_on_gun_btn_pressed"]
[connection signal="pressed" from="frame/right_panel/right_panel_vbox/gun_menu/gun_bando_btn" to="." method="_on_gun_bando_btn_pressed"]
[connection signal="pressed" from="frame/right_panel/right_panel_vbox/gun_menu/gun_bando_menu/gun_bando_rename_btn" to="." method="_on_gun_bando_rename_btn_pressed"]
[connection signal="pressed" from="frame/right_panel/right_panel_vbox/gun_menu/gun_bag_btn" to="." method="_on_gun_bag_btn_pressed"]
[connection signal="pressed" from="frame/right_panel/right_panel_vbox/gun_menu/gun_bag_menu/gun_bag_fave_btn" to="frame/gun_info_bag_panel" method="_on_gun_bag_fave_btn_pressed"]
[connection signal="pressed" from="frame/right_panel/right_panel_vbox/gun_menu/gun_bag_menu/gun_bag_promote_btn" to="." method="_on_gun_bag_promote_btn_pressed"]
[connection signal="pressed" from="frame/right_panel/right_panel_vbox/gun_menu/gun_smelt_btn" to="." method="_on_gun_smelt_btn_pressed"]
[connection signal="focus_entered" from="frame/right_panel/right_panel_vbox/gun_menu/gun_smelt_menu/gun_smelt_current_btn" to="frame/gun_info_smelt_panel" method="_on_gun_smelt_current_btn_focus_entered"]
[connection signal="mouse_entered" from="frame/right_panel/right_panel_vbox/gun_menu/gun_smelt_menu/gun_smelt_current_btn" to="frame/gun_info_smelt_panel" method="_on_gun_smelt_current_btn_mouse_entered"]
[connection signal="pressed" from="frame/right_panel/right_panel_vbox/gun_menu/gun_smelt_menu/gun_smelt_current_btn" to="frame/gun_info_smelt_panel" method="_on_gun_smelt_current_btn_pressed"]
[connection signal="focus_entered" from="frame/right_panel/right_panel_vbox/gun_menu/gun_smelt_menu/gun_smelt_empty_btn" to="frame/gun_info_smelt_panel" method="_on_gun_smelt_empty_btn_focus_entered"]
[connection signal="mouse_entered" from="frame/right_panel/right_panel_vbox/gun_menu/gun_smelt_menu/gun_smelt_empty_btn" to="frame/gun_info_smelt_panel" method="_on_gun_smelt_empty_btn_mouse_entered"]
[connection signal="pressed" from="frame/right_panel/right_panel_vbox/gun_menu/gun_smelt_menu/gun_smelt_empty_btn" to="frame/gun_info_smelt_panel" method="_on_gun_smelt_empty_btn_pressed"]
[connection signal="focus_entered" from="frame/right_panel/right_panel_vbox/gun_menu/gun_smelt_menu/gun_smelt_unfaves_btn" to="frame/gun_info_smelt_panel" method="_on_gun_smelt_unfaves_btn_focus_entered"]
[connection signal="mouse_entered" from="frame/right_panel/right_panel_vbox/gun_menu/gun_smelt_menu/gun_smelt_unfaves_btn" to="frame/gun_info_smelt_panel" method="_on_gun_smelt_unfaves_btn_mouse_entered"]
[connection signal="pressed" from="frame/right_panel/right_panel_vbox/gun_menu/gun_smelt_menu/gun_smelt_unfaves_btn" to="frame/gun_info_smelt_panel" method="_on_gun_smelt_unfaves_btn_pressed"]
[connection signal="focus_entered" from="frame/right_panel/right_panel_vbox/gun_menu/gun_smelt_menu/gun_smelt_inbag_btn" to="frame/gun_info_smelt_panel" method="_on_gun_smelt_inbag_btn_focus_entered"]
[connection signal="mouse_entered" from="frame/right_panel/right_panel_vbox/gun_menu/gun_smelt_menu/gun_smelt_inbag_btn" to="frame/gun_info_smelt_panel" method="_on_gun_smelt_inbag_btn_mouse_entered"]
[connection signal="pressed" from="frame/right_panel/right_panel_vbox/gun_menu/gun_smelt_menu/gun_smelt_inbag_btn" to="frame/gun_info_smelt_panel" method="_on_gun_smelt_inbag_btn_pressed"]
[connection signal="pressed" from="frame/right_panel/right_panel_vbox/gun_menu/gun_reload_btn" to="." method="_on_gun_reload_btn_pressed"]
[connection signal="visibility_changed" from="frame/right_panel/right_panel_vbox/gun_menu/gun_reload_menu" to="frame/right_panel/right_panel_vbox/gun_menu/gun_reload_menu" method="_on_visibility_changed"]
[connection signal="pressed" from="frame/right_panel/right_panel_vbox/gun_menu/gun_breed_btn" to="." method="_on_gun_breed_btn_pressed"]
[connection signal="pressed" from="frame/right_panel/right_panel_vbox/candy_btn" to="." method="_on_candy_btn_pressed"]
[connection signal="pressed" from="frame/right_panel/right_panel_vbox/candy_menu/make_btn" to="." method="_on_make_btn_pressed"]
[connection signal="pressed" from="frame/right_panel/right_panel_vbox/brain_btn" to="." method="_on_brain_btn_pressed"]
[connection signal="pressed" from="frame/right_panel/right_panel_vbox/brain_menu/vidcon_btn" to="." method="_on_vidcon_btn_pressed"]
[connection signal="pressed" from="frame/right_panel/right_panel_vbox/brain_menu/brain_levelup_btn" to="." method="_on_brain_levelup_btn_pressed"]
[connection signal="pressed" from="frame/right_panel/right_panel_vbox/brain_menu/brain_levelup_menu/brain_levelup_confirm_btn" to="." method="_on_brain_levelup_confirm_btn_pressed"]
[connection signal="pressed" from="frame/right_panel/right_panel_vbox/equip_btn" to="." method="_on_equip_btn_pressed"]
[connection signal="pressed" from="frame/right_panel/right_panel_vbox/inventory_btn" to="." method="_on_inventory_btn_pressed"]
[connection signal="pressed" from="frame/right_panel/right_panel_vbox/dwarf_btn" to="." method="_on_dwarf_btn_pressed"]
[connection signal="pressed" from="frame/right_panel/right_panel_vbox/dwarf_menu/dwarf_connect_btn" to="." method="_on_dwarf_connect_btn_pressed"]
[connection signal="pressed" from="frame/right_panel/right_panel_vbox/unplug_btn" to="." method="_on_unplug_btn_pressed"]
